hphp/hack/test/typecheck/type_structure/typing_type_structure4.php.exp
File "typing_type_structure4.php", line 5, characters 29-35:
MyTrait is uninstantiable (Typing[4002])
File "typing_type_structure4.php", line 3, characters 7-13:
Declaration is here
