hphp/hack/test/typecheck/type_structure/typing_type_structure4.php
<?hh // strict

trait MyTrait {}

function test(TypeStructure<MyTrait> $x): void {}
